Fix bug on mobile displays

--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,8 @@ p {
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 0 4px #000;
+  display: flex;
+  flex-direction: column;
 }
 
 .project h3 {
@@ -166,9 +168,10 @@ p {
 }
 
 .project p {
-  padding: 8px;
+  flex-grow: 1;
+  padding: 8px !important;
   margin: 0;
-  height: 80px;
+  min-height: 80px;
   font-weight: 200;
   text-align: left;
 }
@@ -203,7 +206,7 @@ p {
 }
 
 #contact a {
-  color: #8c8f91;
+  color: #46546b;
   flex-grow: 0;
   flex-shrink: 0;
   text-decoration: none;
